:lipstick: make correct size header visible across pages

--- a/next/components/header/header.module.css
+++ b/next/components/header/header.module.css
@@ -1,21 +1,14 @@
 .header {
-  display: none;
-}
-
-
-@media (min-width: 640px) {
-  .header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    align-items: center;
-    padding: 0.25rem var(--gutter);
-    position: absolute;
-    z-index: 1000;
-    isolation: isolate;
-    height: 8.5rem; /* Hides the header */
-  }
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  padding: 0.25rem var(--gutter);
+  position: absolute;
+  z-index: 1000;
+  isolation: isolate;
+  height: 8.5rem; /* Hides the header */
 }
 
 .nav {
